--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <head>
-<title>noyuno.dip.jp</title>
+<title>noyuno.github.jp</title>
 </head>
 <body>
-    <h1>noyuno.dip.jp</h1>
+    <h1>noyuno.github.jp</h1>
     <p>
         <a href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(docker)</a><br>
