--- a/index.html
+++ b/index.html
@@ -1,18 +1,95 @@
 <!doctype html>
 <head>
-<title>noyuno.github.io</title>
+    <title>noyuno.github.io</title>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Inconsolata" />
+    <style>
+        * { font-family:"Inconsolata", monospace; font-size:20px; color: lightgray}
+        body { background-color: #222}
+        a { text-decoration: none }
+        a:link, a:visited { color:lightgray }
+        a:active, a:hover, a:focus { color: white }
+        h1 { font-weight: bold }
+        hr { height: 0; margin: 0; padding: 0; border: 0; border-top: 1px dashed #bbb;  }
+        hr:after {
+            content: '✂';
+            display: inline-block;
+            position: relative;
+            top: -12px;
+            left: 40px;
+            padding: 0 3px;
+            font-size: 18px;
+        }
+        .wrapper { position: fixed; top:0; left:0; width: 100%; height: 100%;}
+        #canvas { width: 2000px; height: 2000px }
+        #content { position: absolute; margin: 30px; top: 0; left: 0}
+    </style>
+    <script>
+        window.onload = function () {
+            var cs  = document.getElementById('canvas');
+            cs.width = 2000;
+            cs.height = 2000;
+            var ctx = cs.getContext('2d');
+            ctx.strokeStyle = "lightgray";
+            ctx.fillStyle = "lightgray";
+            ctx.lineWidth = 10;
+            var w = cs.width;
+            var h = cs.height;
+            console.log(w);
+            console.log(h);
+            var x = 0;
+
+            var array = [];
+            function box(x, yv, ya, r) {
+                this.x = x;
+                this.yv = yv;
+                this.ya = ya;
+                this.y = 0;
+                this.r = r;
+            }
+            box.prototype = {
+                next: function() {
+                    this.yv += this.ya;
+                    this.y += this.yv;
+                }
+            };
+            setInterval(function () {
+                ctx.clearRect(0, 0, w, h);
+                ctx.globalAlpha = 0.3;
+                if (Math.random()>0.98) {
+                    array.push(new box(
+                        Math.random()*w,
+                        Math.random()*1,
+                        Math.random()*0.05, 
+                        Math.max(Math.random()*20, 4)));
+                }
+                array.forEach(function (n) {
+                    n.next();
+                    ctx.lineWidth = n.r*2;
+                    ctx.globalAlpha = -(0.4-0.05)/(20-4)*n.r+0.5;
+                    ctx.beginPath();
+                    ctx.arc(n.x, n.y, n.r, 0, Math.PI*2, true);
+                    ctx.stroke();
+                });
+            }, 1000/30);
+        };
+    </script>
 </head>
 <body>
+    <div class="wrapper"><canvas id="canvas"></canvas></div>
+    <div id="content">
     <h1>noyuno.github.io</h1>
     <p>
         <a href="https://github.com/noyuno/dotfiles">dotfiles</a>
-        <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(docker)</a><br>
+        <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(Docker)</a><br>
         <a href="https://bitbucket.org/noyuno/eng">eng</a><br>
         <a href="https://bitbucket.org/noyuno/paint">paint</a><br>
         <a href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
+    </p>
         <hr>
+    <p>
         <a href="https://github.com/noyuno/">GitHub</a><br>
         <a href="https://bitbucket.org/noyuno/">Bitbucket</a><br>
     </p>
+    </div>
 </body>
 
