--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>noyuno.github.io</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+    <meta name="viewport" content="width=device-width">
     <style>
         * { font-family:"Inconsolata", monospace; font-size:20px; color: lightgray}
         body { background-color: #222}
