--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
     <p>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(Docker)</a><br>
+        <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
+        <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
         <a id="eng" href="https://bitbucket.org/noyuno/eng">eng</a><br>
         <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
         <a id="link" href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
