--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         var arrowkey = function(f, e) {
             var linkar = [["dotfiles"], ["eng"], ["paint"], ["link"], 
-                ["github"], ["bitbucket"], ["calc.vim"], ["unite-latex-symbols"]];
+                ["github"], ["bitbucket"]];
             shiftkey = e.shiftKey;
             switch (e.keyCode) {
                 case 39: // right
@@ -200,8 +200,11 @@
     <p>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(Docker)</a><br>
+        <!--
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
+        <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
+        -->
         <a id="eng" href="https://bitbucket.org/noyuno/eng">eng</a><br>
         <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
         <a id="link" href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
