--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         var arrowkey = function(f, e) {
             var linkar = [["dotfiles"], ["eng"], ["paint"], ["link"], 
-                ["github"], ["bitbucket"]];
+                ["github"], ["bitbucket", "i"], ["blog"]];
             shiftkey = e.shiftKey;
             switch (e.keyCode) {
                 case 39: // right
@@ -212,6 +212,7 @@
     </p>
         <hr>
     <p>
+        <a id="blog" href="https://noyuno.github.io/blog">blog</a><br>
         <a id="github" href="https://github.com/noyuno/">GitHub</a><br>
         <a id="bitbucket" href="https://bitbucket.org/noyuno/">Bitbucket</a><br>
         <div id="score"></div>
