--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     </p>
         <hr>
     <p>
-        <a id="blog" href="https://noyuno.github.io/blog">blog</a><br>
+        <a id="blog" href="https://noyuno.github.io/blog/">blog</a><br>
         <a id="github" href="https://github.com/noyuno/">GitHub</a><br>
         <a id="bitbucket" href="https://bitbucket.org/noyuno/">Bitbucket</a><br>
         <div id="score"></div>
