--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <h1>noyuno.github.io</h1>
     <p>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
-        <a href="https://cloud.docker.com/app/noyuno/repository/docker/noyuno/dotfiles">(Docker)</a><br>
+        <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
         <!--
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
