--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <a id="secret" href="#" onclick="toggle();">secret</a>
         <div class="hidden">
-            <a id="eng" href="https://bitbucket.org/noyuno/eng">eng</a><br>
+            <a id="labo" href="https://bitbucket.org/noyuno/labo">labo</a><br>
             <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
             <a id="link" href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
         </div>
