--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div id="content">
     <h1>noyuno.github.io</h1>
     <div class="section">
+        <a id="anime" href="/anime">anime</a><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
