--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
     <meta name="viewport" content="width=device-width">
     <style>
-        * { font-family:"Inconsolata", monospace; font-size:20px; color: lightgray}
+        * { 
+            font-family:"Inconsolata", "Noto Sans CJK JP DemiLight", "Noto Sans CJK JP Regular", monospace;
+            font-size:20px;
+            color: lightgray;
+            line-height: 1.2em
+        }
         body { background-color: #222}
         a { text-decoration: none }
         a:link, a:visited { color:lightgray }
@@ -23,17 +28,20 @@
         .wrapper { position: fixed; top:0; left:0; width: 100%; height: 100%;}
         #canvas { width: 2000px; height: 2000px }
         #content { position: absolute; margin: 30px; top: 0; left: 0}
-        .section { margin: 1em 0em 1em 0em; }
+        .section { margin: 1em 0em 1em 0em; width: 250px; }
         .hidden { display: none; }
+        #anime-banner { font-size: 17px; }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./index.js"></script>
+    <script src="./anime-banner.js"></script>
 </head>
 <body>
     <div class="wrapper"><canvas id="canvas"></canvas></div>
     <div id="content">
     <h1>noyuno.github.io</h1>
     <div class="section">
-        <a id="anime" href="/anime">anime</a><br>
+        <a id="anime" href="/anime">anime</a>: <span id="anime-banner"></span><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
@@ -53,6 +61,7 @@
         <a id="blog" href="https://noyuno.github.io/blog/">blog</a><br>
         <a id="github" href="https://github.com/noyuno/">GitHub</a><br>
         <a id="bitbucket" href="https://bitbucket.org/noyuno/">Bitbucket</a><br>
+        <a id="steam" href="https://steamcommunity.com/id/noyuno/">Steam</a><br>
         <div id="score"></div>
     </div>
     </div>
