--- a/anime/index.html
+++ b/anime/index.html
@@ -44,6 +44,7 @@
             <input type="text" id="search" placeholder="フィルタ" onkeyup="search();"></input><br>
         <hr>
         <div class="section" id="anime"></div>
+        <div class="section" id="search-not-found" style="display: none">∅</div>
         <div class="footer" role="contentinfo">
             Powered by しょぼいカレンダー
         </div>
