--- a/anime/index.html
+++ b/anime/index.html
@@ -1,47 +1,42 @@
 <!doctype html>
 <head>
     <title>noyuno.github.io</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+    <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+    <link rel = "stylesheet" type = "text/css" href = "../index.css">
     <style>
-        * { 
-            font-family:"Inconsolata", "Noto Sans CJK JP DemiLight", "Noto Sans CJK JP Regular", monospace;
+        * {
             font-size:17px;
-            color: lightgray;
-            line-height: 1.2em
         }
-        body, input { background-color: #222}
-        table { white-space: nowrap; table-layout: auto }
-        td { padding-right: 0.5em }
-        a { text-decoration: none }
-        a:link, a:visited { color:lightgray }
-        a:active, a:hover, a:focus { color: white }
-        h1 { font-weight: bold }
-        hr { height: 0; margin: 0; padding: 0;  border: 0; margin-top: 10px; border-top: 1px dashed #bbb;  }
+        table {
+            white-space: nowrap;
+            table-layout: auto 
+        }
 
-        hr:after {
-            content: '✂';
-            display: inline-block;
-            position: relative;
-            top: -10px;
-            left: 40px;
-            padding: 0 3px;
-            font-size: 18px;
+        td {
+            padding-right: 0.5em 
         }
-        .wrapper { position: fixed; top:0; left:0; width: 100%; height: 100%;}
-        #canvas { width: 2000px; height: 2000px }
-        #content { position: absolute; margin: 30px; top: 0; left: 0}
-        .section { margin: 1em 0em 1em 0em; }
-        .hidden { display: none; }
+        hr:after {
+            top: -10px;
+        }
+        .section {
+            margin: 1em 0em 1em 0em;
+            width: auto;
+        }
+        .hidden {
+            display: none;
+        }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="./index.js" charset="utf-8"></script>
 </head>
 <body>
     <div class="wrapper"><canvas id="canvas"></canvas></div>
         <div id="content">
         <b><a href="/" id="root">noyuno.github.io</a> / anime</b> 
-            <input type="text" id="search" placeholder="フィルタ" onkeyup="search();"></input><br>
+            <input type="text" id="search" placeholder="フィルタ" onkeyup="search();
+"></input><br>
         <hr>
         <div class="section" id="anime"></div>
         <div class="section" id="search-not-found" style="display: none">∅</div>
