--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
 <!doctype html>
 <head>
     <title>noyuno.github.io</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+    <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+    <link rel = "stylesheet" type = "text/css" href = "index.css">
     <style>
-        * { 
-            font-family:"Inconsolata", "Noto Sans CJK JP DemiLight", "Noto Sans CJK JP Regular", monospace;
-            font-size:20px;
-            color: lightgray;
-            line-height: 1.2em
-        }
-        body { background-color: #222}
-        a { text-decoration: none }
-        a:link, a:visited { color:lightgray }
-        a:active, a:hover, a:focus { color: white }
-        h1 { font-weight: bold }
-        hr { height: 0; margin: 0; padding: 0; border: 0; border-top: 1px dashed #bbb;  }
-        hr:after {
-            content: '✂';
-            display: inline-block;
-            position: relative;
-            top: -12px;
-            left: 40px;
-            padding: 0 3px;
-            font-size: 18px;
-        }
-        .wrapper { position: fixed; top:0; left:0; width: 100%; height: 100%;}
-        #canvas { width: 2000px; height: 2000px }
-        #content { position: absolute; margin: 30px; top: 0; left: 0}
-        .section { margin: 1em 0em 1em 0em; width: 250px; }
-        .hidden { display: none; }
         #anime-banner { font-size: 17px; }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./index.js"></script>
-    <script src="./anime-banner.js"></script>
+    <script src="./anime/text.js" charset="utf-8"></script>
 </head>
 <body>
     <div class="wrapper"><canvas id="canvas"></canvas></div>
     <div id="content">
     <h1>noyuno.github.io</h1>
     <div class="section">
-        <a id="anime" href="/anime">anime</a>: <span id="anime-banner"></span><br>
+        <a id="anime" href="./anime">anime</a>: <span id="anime-banner"></span><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
