--- a/3d/webgl_camera_cinematic.html
+++ b/3d/webgl_camera_cinematic.html
@@ -48,7 +48,7 @@
                 info.style.top = '10px';
                 info.style.width = '100%';
                 info.style.textAlign = 'center';
-                info.innerHTML = '<a href="http://threejs.org" target="_blank">three.js</a> webgl - interactive cubes';
+                info.innerHTML = '<a href="/">noyuno.github.io</a>';
                 container.appendChild( info );
                 camera = new THREE.CinematicCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
                 camera.setLens(5);
