--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1>noyuno.github.io</h1>
     <div class="section">
         <a id="anime" href="./anime">anime</a>: <span id="anime-banner"></span><br>
+        <a id="3d" href="./3d">3d</a><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
