--- a/3d/webgl_camera_cinematic.html
+++ b/3d/webgl_camera_cinematic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>three.js webgl-camera cinematic</title>
+        <title>3d</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
         <style>
@@ -30,7 +30,7 @@
             var camera, scene, raycaster, renderer;
 
             var mouse = new THREE.Vector2(), INTERSECTED;
-            var radius = 70, theta = 0;
+            var radius = 150, theta = 0;
             var debug = false;
 
 
@@ -52,7 +52,7 @@
                 container.appendChild( info );
                 camera = new THREE.CinematicCamera( 60, window.innerWidth / window.innerHeight, 1, 1000 );
                 camera.setLens(5);
-                camera.position.set(2, 1, 500);
+                camera.position.set(2, 1, 3000);
 
                 camera.far = 1500;
 
@@ -66,7 +66,7 @@
 
                 var geometry = new THREE.BoxGeometry( 20, 20, 20 );
 
-                var objectlocation = 3000;
+                var objectlocation = 4000;
                 for ( var i = 0; i < objectlocation * 5; i ++ ) {
                     var r = Math.random() * 0xff;
                     var b = Math.random() * 0xff;
@@ -197,20 +197,24 @@
             }
 
 
-            var count = 0;
             var dx = 0, dy = 0, dz = 0;
             var basex = 0, basey = 0, basez = 0;
             var oldx = 0, oldy = 0, oldz = 0;
             var dtheta = 0;
-            var mode = 200;
+            var mode = true;
+            var modeinit = false;
+            var maxcount = 0;
+            var count = 0;
 
             function render() {
 
-                if (Math.floor(count / mode) % 2 == 0) {
+                if (mode) {
                     // rotate mode
-                    if (Math.floor(count / mode) == count / mode) {
+                    if (modeinit == false) {
+                        maxcount = 100 + Math.floor(100 * Math.random());
+                        modeinit = true;
                     }
-                    theta += 0.2;
+                    theta += 0.3;
                     oldx = camera.position.x;
                     oldy = camera.position.y;
                     oldz = camera.position.z;
@@ -224,10 +228,12 @@
                         basez + radius * Math.cos(THREE.Math.degToRad(theta + 0.1))));
                 } else {
                     // straight mode
-                    if (Math.floor(count / mode) == count / mode) {
-                        dx = 20 * (camera.position.x - oldx);
-                        dy = 20 * (camera.position.y - oldy);
-                        dz = 20 * (camera.position.z - oldz);
+                    if (modeinit == false) {
+                        dx = 15 * (camera.position.x - oldx);
+                        dy = 15 * (camera.position.y - oldy);
+                        dz = 15 * (camera.position.z - oldz);
+                        maxcount = 50 + Math.floor(100 * Math.random());
+                        modeinit = true;
                     }
                     basex += dx;
                     basey += dy;
@@ -235,9 +241,18 @@
                     camera.position.x += dx;
                     camera.position.y += dy;
                     camera.position.z += dz;
-                }
-                count++;
+                    if (count == maxcount) {
 
+                    }
+                }
+                
+                count++;
+                if (count > maxcount) {
+                    mode = !mode;
+                    count = 0;
+                    console.log(mode);
+                    modeinit = false;
+                }
 
                 //camera.lookAt(new THREE.Vector3(camera.position.x - oldx, camera.position.y - oldy, camera.position.z - oldz).multiplyScalar(1));
                 /*
