--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
         <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
-        <a id="start" href="#" onclick="start();">start</a><br> 
+        <a id="start" href="#">start</a>
+        <a id="stop" href="#">stop</a><br> 
 
-        <a id="secret" href="#" onclick="toggle();">secret</a>
+        <a id="secret" href="#">secret</a>
         <div class="hidden">
             <a id="labo" href="https://bitbucket.org/noyuno/labo">labo</a><br>
             <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
