--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a id="3d" href="./3d">3d</a><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
+        <a id="SourceHanSansJ-LaTeX" href="https://github.com/noyuno/SourceHanSansJ-LaTeX">SourceHanSansJ-LaTeX</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
         <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
