--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a id="stop" href="#">stop</a><br> 
 
         <a id="secret" href="#">secret</a>
-        <div class="hidden">
+        <div class="hidden" style="padding-left:2em">
             <a id="labo" href="https://bitbucket.org/noyuno/labo">labo</a><br>
             <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
             <a id="link" href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
