--- a/index.html
+++ b/index.html
@@ -25,15 +25,9 @@
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
         <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
+        <a id="pi" href="http://git.noyuno.mydns.jp">file server</a><br>
         <a id="start" href="#">start</a>
         <a id="stop" href="#">stop</a><br> 
-
-        <a id="secret" href="#">secret</a>
-        <div class="hidden" style="padding-left:2em">
-            <a id="labo" href="https://bitbucket.org/noyuno/labo">labo</a><br>
-            <a id="paint" href="https://bitbucket.org/noyuno/paint">paint</a><br>
-            <a id="link" href="https://bitbucket.org/noyuno/eng/src/master/schedule/link.md?at=master&fileviewer=file-view-default">link</a><br>
-        </div>
     </div>
         <hr>
     <div class="section">
