--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
         <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
-        <a id="pi" href="http://git.noyuno.mydns.jp">file server</a><br>
+        <a id="pi" href="http://noyuno.mydns.jp">pi server</a>
+        (<a id="pigit" href="http://git.noyuno.mydns.jp">Git</a>)<br>
         <a id="start" href="#">start</a>
         <a id="stop" href="#">stop</a><br> 
     </div>
