--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
         <div id="score"></div>
     </div>
     </div>
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-88784647-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-88784647-2');
+</script>
 </body>
 
