--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <a id="anime" href="http://noyuno.mydns.jp/anime">anime</a><br>
         <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
+        <a id="YukariAkiyamaHubotSlack" href="https://github.com/noyuno/YukariAkiyamaHubotSlack">YukariAkiyamaHubotSlack</a><br>
         <a id="latex-fonts" href="https://github.com/noyuno/latex-fonts">latex-fonts</a><br>
         <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
         <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
