--- a/index.html
+++ b/index.html
@@ -25,25 +25,33 @@
     <div id="content">
     <h1>noyuno.github.io</h1>
     <div class="section">
-        <a id="anime" href="http://noyuno.mydns.jp/anime">anime</a><br>
-        <a id="dotfiles" href="https://github.com/noyuno/dotfiles">dotfiles</a>
+        <a href="http://noyuno.mydns.jp/anime">anime</a><br>
+        <a href="https://github.com/noyuno/dotfiles">dotfiles</a>
         <a href="https://hub.docker.com/r/noyuno/dotfiles/">(Docker)</a><br>
-        <a id="YukariAkiyamaHubotSlack" href="https://github.com/noyuno/YukariAkiyamaHubotSlack">YukariAkiyamaHubotSlack</a><br>
-        <a id="latex-fonts" href="https://github.com/noyuno/latex-fonts">latex-fonts</a><br>
-        <a id="calc.vim" href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
-        <a id="unite-latex-symbols" href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
-        <a id="unite-uri" href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
-        <a id="pi" href="http://noyuno.mydns.jp">pi server</a>
-        (<a id="pigit" href="http://git.noyuno.mydns.jp">Git</a>)<br>
+        <a href="https://github.com/noyuno/YukariAkiyamaHubotSlack">YukariAkiyamaHubotSlack</a><br>
+        <a class="button" onclick='toggle("vim-hidden");'>Vim plugins</a><br>
+        <div class="vim-hidden hidden">
+            <a href="https://github.com/noyuno/latex-fonts">latex-fonts</a><br>
+            <a href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
+            <a href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
+            <a href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
+        </div>
+        <a class="button" onclick='toggle("lib-hidden");'>Libraries</a><br>
+        <div class="lib-hidden hidden">
+            <a href="https://github.com/noyuno/lgo">lgo</a><br>
+            <a href="https://github.com/noyuno/lib">lib</a><br>
+        </div>
+        <a href="http://noyuno.mydns.jp">pi server</a>
+        (<a href="http://git.noyuno.mydns.jp">Git</a>)<br>
         <a id="start" href="#">start</a>
         <a id="stop" href="#">stop</a><br> 
     </div>
         <hr>
     <div class="section">
-        <a id="blog" href="https://noyuno.github.io/blog/">blog</a><br>
-        <a id="github" href="https://github.com/noyuno/">GitHub</a><br>
-        <a id="steam" href="https://steamcommunity.com/id/noyuno/">Steam</a><br>
-        <a id="twitter" href="https://twitter.com/noyunot">Twitter</a><br>
+        <a href="https://noyuno.github.io/blog/">blog</a><br>
+        <a href="https://github.com/noyuno/">GitHub</a><br>
+        <a href="https://steamcommunity.com/id/noyuno/">Steam</a><br>
+        <a href="https://twitter.com/noyunot">Twitter</a><br>
         <div id="score"></div>
     </div>
     </div>
