--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <style>
         #anime-banner { font-size: 17px; }
     </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./index.js"></script>
-    <script src="./anime/text.js" charset="utf-8"></script>
+    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script async src="./index.js"></script>
+    <script async src="./anime/text.js" charset="utf-8"></script>
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88784647-1"></script>
     <script>
