--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
         <a href="https://github.com/noyuno/YukariAkiyamaHubotSlack">YukariAkiyamaHubotSlack</a><br>
         <a class="button" onclick='toggle("vim-hidden");'>Vim plugins</a><br>
         <div class="vim-hidden hidden">
-            <a href="https://github.com/noyuno/latex-fonts">latex-fonts</a><br>
             <a href="https://github.com/noyuno/calc.vim">calc.vim</a><br>
-            <a href="https://github.com/noyuno/unite-latex-symbols">unite-latex-symbols</a><br>
+            <a href="https://github.com/noyuno/unite-latexsymbols">unite-latexsymbols</a><br>
             <a href="https://github.com/noyuno/unite-uri">unite-uri</a><br>
         </div>
         <a class="button" onclick='toggle("lib-hidden");'>Libraries</a><br>
         <div class="lib-hidden hidden">
             <a href="https://github.com/noyuno/lgo">lgo</a><br>
             <a href="https://github.com/noyuno/lib">lib</a><br>
+            <a href="https://github.com/noyuno/fonts">fonts</a><br>
         </div>
         <a href="http://noyuno.mydns.jp">pi server</a>
         (<a href="http://git.noyuno.mydns.jp">Git</a>)<br>
