--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
             <a href="https://github.com/noyuno/fonts">fonts</a><br>
         </div>
         <a href="http://noyuno.mydns.jp">pi server</a>
-        (<a href="http://git.noyuno.mydns.jp">Git</a>)<br>
+        (
+        <a href="https://git.noyuno.mydns.jp">Git</a>
+        <a href="https://dir.noyuno.mydns.jp">Storage</a>
+        )<br>
         <a id="start" href="#">start</a>
         <a id="stop" href="#">stop</a><br> 
     </div>
